Resolves: fdo#75565 reduce block on pasting rtf like we do for html

Change-Id: I74a9748a2e4981dc5d1677f06db7eceed9e4b108